[package]
name = "attestation-report"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Provider-agnostic TEE attestation report types"
repository = "https://github.com/TeeSQL/attestation-report"
homepage = "https://github.com/TeeSQL/attestation-report"
keywords = ["attestation", "tee", "tdx", "confidential-computing", "ra-tls"]
categories = ["cryptography", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
